完成编写预处理
